[gd_scene load_steps=54 format=2]

[ext_resource path="res://jogoDINO/player/png/Dead (2).png" type="Texture" id=1]
[ext_resource path="res://jogoDINO/player/png/Dead (3).png" type="Texture" id=2]
[ext_resource path="res://jogoDINO/player/png/Idle (2).png" type="Texture" id=3]
[ext_resource path="res://jogoDINO/player/png/Jump (6).png" type="Texture" id=4]
[ext_resource path="res://jogoDINO/player/png/Run (5).png" type="Texture" id=5]
[ext_resource path="res://jogoDINO/player/png/Dead (4).png" type="Texture" id=6]
[ext_resource path="res://jogoDINO/player/png/Dead (7).png" type="Texture" id=7]
[ext_resource path="res://jogoDINO/player/png/Idle (4).png" type="Texture" id=8]
[ext_resource path="res://jogoDINO/player/png/Dead (9).png" type="Texture" id=9]
[ext_resource path="res://jogoDINO/player/png/Idle (10).png" type="Texture" id=10]
[ext_resource path="res://jogoDINO/player/png/Jump (7).png" type="Texture" id=11]
[ext_resource path="res://jogoDINO/player/png/Jump (9).png" type="Texture" id=12]
[ext_resource path="res://jogoDINO/player/png/Run (1).png" type="Texture" id=13]
[ext_resource path="res://jogoDINO/player/png/Idle (6).png" type="Texture" id=14]
[ext_resource path="res://jogoDINO/player/png/Run (3).png" type="Texture" id=15]
[ext_resource path="res://jogoDINO/player/png/Run (4).png" type="Texture" id=16]
[ext_resource path="res://jogoDINO/player/png/Idle (5).png" type="Texture" id=17]
[ext_resource path="res://jogoDINO/player/png/Dead (6).png" type="Texture" id=18]
[ext_resource path="res://jogoDINO/player/png/Jump (1).png" type="Texture" id=19]
[ext_resource path="res://jogoDINO/player/png/Idle (7).png" type="Texture" id=20]
[ext_resource path="res://jogoDINO/player/png/Jump (2).png" type="Texture" id=21]
[ext_resource path="res://jogoDINO/player/png/Jump (3).png" type="Texture" id=22]
[ext_resource path="res://jogoDINO/player/png/Jump (4).png" type="Texture" id=23]
[ext_resource path="res://jogoDINO/player/png/Jump (10).png" type="Texture" id=24]
[ext_resource path="res://jogoDINO/player/png/Idle (3).png" type="Texture" id=25]
[ext_resource path="res://jogoDINO/player/png/Idle (1).png" type="Texture" id=26]
[ext_resource path="res://jogoDINO/player/png/Run (2).png" type="Texture" id=27]
[ext_resource path="res://jogoDINO/player/png/Run (6).png" type="Texture" id=28]
[ext_resource path="res://jogoDINO/player/png/Jump (5).png" type="Texture" id=29]
[ext_resource path="res://jogoDINO/player/png/Dead (5).png" type="Texture" id=30]
[ext_resource path="res://jogoDINO/player/png/Dead (8).png" type="Texture" id=31]
[ext_resource path="res://jogoDINO/player/png/Idle (9).png" type="Texture" id=32]
[ext_resource path="res://jogoDINO/player/png/Dead (10).png" type="Texture" id=33]
[ext_resource path="res://jogoDINO/player/png/Jump (8).png" type="Texture" id=34]
[ext_resource path="res://jogoDINO/player/png/Idle (8).png" type="Texture" id=35]
[ext_resource path="res://jogoDINO/player/png/Run (9).png" type="Texture" id=36]
[ext_resource path="res://jogoDINO/player/png/Run (8).png" type="Texture" id=37]
[ext_resource path="res://jogoDINO/player/png/Run (10).png" type="Texture" id=38]
[ext_resource path="res://jogoDINO/player/png/Run (7).png" type="Texture" id=39]
[ext_resource path="res://jogoDINO/player/png/Attack (8).png" type="Texture" id=40]
[ext_resource path="res://jogoDINO/player/png/Attack (2).png" type="Texture" id=41]
[ext_resource path="res://jogoDINO/player/png/Attack (3).png" type="Texture" id=42]
[ext_resource path="res://jogoDINO/player/png/Attack (9).png" type="Texture" id=43]
[ext_resource path="res://jogoDINO/player/png/Dead (1).png" type="Texture" id=44]
[ext_resource path="res://jogoDINO/player/png/Attack (4).png" type="Texture" id=45]
[ext_resource path="res://jogoDINO/player/png/Attack (5).png" type="Texture" id=46]
[ext_resource path="res://jogoDINO/player/png/Attack (1).png" type="Texture" id=47]
[ext_resource path="res://jogoDINO/player/png/Attack (6).png" type="Texture" id=48]
[ext_resource path="res://jogoDINO/player/png/Attack (7).png" type="Texture" id=49]
[ext_resource path="res://jogoDINO/player/png/Attack (10).png" type="Texture" id=50]
[ext_resource path="res://jogoDINO/Sprite/Player.gd" type="Script" id=51]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 47 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 50 ) ],
"loop": true,
"name": "atack",
"speed": 15.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 30 ), ExtResource( 18 ), ExtResource( 7 ), ExtResource( 31 ), ExtResource( 9 ), ExtResource( 33 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 3 ), ExtResource( 25 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 29 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 34 ), ExtResource( 12 ), ExtResource( 24 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 27 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 28 ), ExtResource( 39 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 38 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 228.333, 161.667 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 51 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -30, 30 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -46.6667, 170 )
shape = SubResource( 2 )

[node name="RayL" type="RayCast2D" parent="."]
position = Vector2( -26.6667, 0 )
cast_to = Vector2( 0, 330 )

[node name="RayR" type="RayCast2D" parent="."]
position = Vector2( -143.333, 3.33333 )
cast_to = Vector2( -3.33334, 326.667 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
